--- a/DATA/SiteWeb/PTUT/style/header.css
+++ b/DATA/SiteWeb/PTUT/style/header.css
@@ -1,7 +1,7 @@
 #header
 {
 	position:fixed;
-	background: #333333;
+	background: #353535;
 	width:100%;
 	height:80px;
 	top:0px;
@@ -20,14 +20,14 @@
 	width:100%;
 	height:50%;
 	margin-top:40px;
-	background: #f3f3f3;
+	background: #f9f9f9;
 	display:block;
 	overflow:hidden;
 	z-index:100000;
 	text-align:center;
 	font-size:1.8em;
 	transition:1s;
-	color:#333333;
+	color:#2c2c2c;
 	box-shadow: 0px 0px 2px 0px grey;
 }
 
