--- a/DATA/SiteWeb/PTUT/style/cours.css
+++ b/DATA/SiteWeb/PTUT/style/cours.css
@@ -1,33 +1,39 @@
 #boxCours
 {
-	width:90%;
-
-	background:yellow;
+	width:70%;
 	margin:auto;
-	margin-top:150px;
-	margin-bottom:20px;
+	margin-top:130px;
+	margin-bottom:70px;
 	overflow:hidden;
 }
 
 
 #coursS1,#coursS2,#coursS3,#coursS4
 {
-	float:left;
-	display:inline;
-	width:45%;
-	min-width:250px;
-	margin-left:0;
-	text-align:left;
-	background:lightgrey;
-	height:290px;
-	border:1px solid black;
+	margin:auto;
+	width:100%;
+
+	min-width:500px;
+	margin-left:0%;
+	margin-top: 20px;
+	text-align:center;
+
 }
 
-#coursS1 {margin-left:5%;border-right:solid 1px #C0C0C0}
-#coursS3 {margin-left:5%;border-right:solid 1px #C0C0C0}
+
+
+
+
 
 h2
-{color:#444444;margin-top:0;text-align:center;margin-bottom:30px;}
+{
+	color:#FFA500;
+	margin-top:0;
+	text-align:left;
+	margin-bottom:30px;
+	whidth:100%;
+	border-bottom: 1px solid #FFA500
+}
 
 
 #boxCours  .liensCours{display:inline-block;}
@@ -36,12 +42,11 @@ h2
 {
 	width:50px;
 	height:50px;
-	margin-left:50px;
-	background:red;
+	margin-left:0px;
+	background:grey;
 	border-radius:15px 15px 15px 15px;
 	vertical-align:middle;
 	overflow:hidden;
 
 }
 #boxCours a p {line-height:0px;text-align:center;width:150px;}
-
