--- a/DATA/Site/style/index.css
+++ b/DATA/Site/style/index.css
@@ -73,12 +73,13 @@
 	font-weight:400;
 	background: #f6f6f6;
 	width:100%;
-	color:#434343;
+	color:#5d5d5d;
 	margin:auto;
 	margin-bottom:0px;
 	line-height:40px;
 	border-radius:1px 1px 1px 1px;
 	cursor:pointer;
+	font-weight: bold;
 }
 
 
