--- a/DATA/Site/style/footer.css
+++ b/DATA/Site/style/footer.css
@@ -15,7 +15,7 @@
 	font-size:9pt;
 	font-weight: 400;
 	color:#403e3f/*#DCDCDC*/;
-	box-shadow: 2px 0px 2px 0px grey ;
+	box-shadow: 0px 0px 5px 2px #cacaca ;
 }
 /*conteneur*/
 #inside-footer
