--- a/DATA/Site/style/connexion.css
+++ b/DATA/Site/style/connexion.css
@@ -14,10 +14,19 @@
  transform: translateY(-55%);
 }
 
+h1
+{
+		width: 65%;
+		margin: auto;
+		margin-bottom: 15px;
+		box-shadow: 0px 1px 0px 0px #c2c2c2;
+}
+
 #WarpperForm
 {
 	padding:15px;
 	margin: auto auto;
+	border-radius: 5px;
 	width:55%;
 	background: #e9e9e9;
 }
@@ -29,15 +38,16 @@ form
 	width: 100%;
 	overflow: hidden;
 }
-label {
+label
+{
   width: 110px;
+	margin-bottom: 5px;
   display: block;
   vertical-align: bottom;
-	line-height: :10px;
+	line-height: 20px;
 	font-weight: bold;
 	color: #484848;
 	text-align: left;
-
 }
 input
 {
