--- a/DATA/Site/style/globalcss.css
+++ b/DATA/Site/style/globalcss.css
@@ -11,15 +11,16 @@ html,body
 	padding:0;
 	font-family:SourceSansProRegular;
 	font-style: normal;
-	background: linear-gradient(#f9f9f9, #ffffff)  ;
+	background: linear-gradient(#f9f9f9, #fdfdfd)  ;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 
 }
+body .co {background-color: #000000	}
 a {text-decoration: none;}
 #warpper
 {
-	
+
 	font-family:SourceSansProLight;
 	margin:0px;
 	padding: 0;
