--- a/DATA/Site/style/header.css
+++ b/DATA/Site/style/header.css
@@ -1,34 +1,43 @@
 #header
 {
-	position:fixed;
+	position:;
 	background: #353535;
 	width:100%;
-	height:80px;
+	height:40px;
 	top:0px;
 	left:0px;
 	z-index:100000;
 	font-family:SourceSansProLight;
 	font-size:0.8em;
 	overflow:;
-	transition: 0.6s;
+	transition: 0.3s;
+	z-index: 10000;
+
 }
 
-
+nav a {text-decoration: none; color:#2c2c2c}
 #sousheader
 {
 	position:relative;
 	width:100%;
-	height:50%;
-	margin-top:40px;
+	height:40px;
+	margin-top:0px;
 	background: #f9f9f9;
 	display:block;
 	overflow:hidden;
 	z-index:100000;
 	text-align:center;
-	font-size:1.8em;
-	transition:1s;
-	color:#2c2c2c;
-	box-shadow: 0px 0px 7px 1px grey;
+	text-decoration: none;
+	font-size:1.5em;
+	font-family:SourceSansProLight;
+	transition:0.2s;
+	box-shadow: 0px 1px 5px 0px #c2c2c2;
+}
+
+
+#sousheader .fixed {
+    position:fixed;
+    top:0px;
 }
 
 /*boutons header*/
@@ -39,7 +48,7 @@
 	float:left;
 	width:100px;
 	min-width:80px;
-	height:50%;
+	height:100%;
 	border-right: 1px solid grey;
 	padding-left:5px;
 	font-weight:400;
@@ -54,7 +63,7 @@
 	margin-left:0px;
 	padding-left:1%;
 	width:190px;
-	height:50%;
+	height:100%;
 	border-right: 1px solid grey;
 	line-height:40px;
 	text-decoration:none;
@@ -82,7 +91,7 @@
 	cursor:pointer;
 }
 
-.univ,.iut {float:right; margin-left:0px; height:50%;width:5%;padding-left:1%;padding-right:1%;min-width:80px;}
+.univ,.iut {float:right; margin-left:0px; height:100%;width:5%;padding-left:1%;padding-right:1%;min-width:80px;}
 .iut {border-right:solid 1px grey;border-left:solid 1px grey;width:4%;}
 
 /*boutons sous header*/
@@ -125,7 +134,7 @@
 	display:block;
 	margin-left:0px;
 	padding:0px;
-	width:2.5%;
+	width:2.3%;
 	min-width:45px;
 	height:100%;
 	background:#FFA500;
@@ -157,7 +166,7 @@
 
 }
 
-.loupe{float:right;width:40px;margin:auto;cursor:pointer;}
+.loupe{float: right;width:40px;margin:0;cursor:pointer;}
 
 .bsh1:hover, .bsh2:hover, .bsh3:hover
 {
