--- a/DATA/Site/style/globalcss.css
+++ b/DATA/Site/style/globalcss.css
@@ -2,29 +2,30 @@
 @font-face    {font-family : 'SourceSansProSemiBold'; src : url('../fonts/SourceSansPro-Semibold.ttf');}
 @font-face    {font-family : 'SourceSansProLight'; src : url('../fonts/SourceSansPro-light.ttf');}
 
-html
-{
-	min-height:100%;
-}
 
-body
+
+html,body
 {
+	height: 100%;
 	margin:0;
 	padding:0;
 	font-family:SourceSansProRegular;
 	font-style: normal;
-	background: linear-gradient(#ededed, #fefefe) ;
+	background: linear-gradient(#f9f9f9, #ffffff)  ;
 	background-repeat: no-repeat;
-	min-height: 100%;
+	background-attachment: fixed;
+
 }
 a {text-decoration: none;}
 #warpper
 {
+	
 	font-family:SourceSansProLight;
 	margin:0px;
 	padding: 0;
 	text-align:center;
 	min-height: 100%;
+	overflow: hidden;
 }
 
 /*quand taille reduite*/
