--- a/DATA/Site/style/index.css
+++ b/DATA/Site/style/index.css
@@ -29,9 +29,9 @@
 #coursTutorat
 {
 	display: inline-block;;
-	width:30%;
+	width:35%;
 	min-width:350px;
-	margin-left:25%;
+	margin-left:22.5%;
 	margin-right: 0;
 	margin-bottom: 20px;
 	padding: 0px;
@@ -57,10 +57,10 @@
 
 
 
-#box3
+#bullesForum
 {
 	float:right;
-	margin-right: 25%;
+	margin-right: 22.5%;
 	margin-left: 0%;
 	width:20%;
 	margin-top:0;
