--- a/DATA/Site/style/connexion.css
+++ b/DATA/Site/style/connexion.css
@@ -1,11 +1,30 @@
-.nU
+@font-face    {font-family : 'SourceSansProRegular'; src : url('../fonts/SourceSansPro-Regular.ttf');}
+@font-face    {font-family : 'SourceSansProSemiBold'; src : url('../fonts/SourceSansPro-Semibold.ttf');}
+@font-face    {font-family : 'SourceSansProLight'; src : url('../fonts/SourceSansPro-light.ttf');}
+
+
+
+html,body
 {
+	min-height: 100%;
+	min-width:450px;
+	margin:0;
+	padding:0;
+	font-family:SourceSansProRegular;
+	font-style: normal;
+	background: linear-gradient(#f3f3f3, #fdfdfd)  ;
+
+}
+
+
+.messageBienvenue
+{
+	text-align: center;
 	width: 100%;
 	margin-top: 50px;
 	line-height: 55px;
 	background: #ededed;
 	color: #FFA500;
-
 }
 
 #boxLogin
@@ -21,12 +40,13 @@
 	margin-top: 100px;
 }
 
-.nD
+.titreConnexion
 {
 		width: 70%;
 		margin: auto;
 		margin-bottom: 15px;
 		box-shadow: 0px 1px 0px 0px #e9e9e9;
+		margin-bottom: 35px;
 }
 
 #WarpperForm
@@ -62,7 +82,7 @@ input
 	padding:5px;
 	width:95%;
 	font-size: 14px;
-	height:20px;
+	height:25px;
 	border: none;
 	border-radius: 2px;
 
@@ -81,3 +101,4 @@ button
  background: linear-gradient(#d48900	, #FFA500) ;
  cursor: pointer;
 }
+.echec{color:red}
