--- a/DATA/Site/style/cours.css
+++ b/DATA/Site/style/cours.css
@@ -21,10 +21,6 @@
 }
 
 
-
-
-
-
 h2
 {
 	color:#FFA500;
@@ -38,15 +34,31 @@ h2
 
 #boxCours  .liensCours{display:inline-block;}
 
-.iconsCours
+.cours
+{
+
+	min-width: 115px;
+	margin-left:30px;
+	margin-right:30px;
+	overflow: hidden;
+	text-align: center;
+	display: inline-block;
+	padding: 0;
+}
+.iconCours
 {
 	width:50px;
 	height:50px;
-	margin-left:0px;
-	background:grey;
-	border-radius:15px 15px 15px 15px;
-	vertical-align:middle;
-	overflow:hidden;
+	background:#e1e1e1;
+	border-radius:15px;
+	margin:auto;
 
 }
+.liencours
+{
+	margin-top: 0px;
+	background: ;
+	min-width: 100%;
+}
+
 #boxCours a p {line-height:0px;text-align:center;width:150px;}
