--- a/DATA/Site/style/accueil.css
+++ b/DATA/Site/style/accueil.css
@@ -6,9 +6,7 @@
 	margin-top:0px;
 	padding:50px 0px 10px 0px;
 	overflow:hidden;
-
 }
-
 
 #bandeau
 {
@@ -30,7 +28,7 @@
 {
 	display: inline-block;;
 	width:35%;
-	min-width:350px;
+	min-width:25px;
 	margin-left:22.5%;
 	margin-right: 0;
 	margin-bottom: 20px;
@@ -38,20 +36,20 @@
 	text-align:center;
 }
 
-#box1,#box2
+.box1
 {
 
 	display: inline-block;;
 	width:100%;
 	margin-bottom: 20px;
-	min-width:250px;
+	min-width:0px;
 	margin-right: 0;
 	padding: 0px;
 	text-align:center;
 	transition:0.4s;
 	background-color: #fefefe;
-	box-shadow: 0px 0px 1px 1px #c5c5c5;
-	border-radius: 2px 2px 2px 2px;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	border-radius: 3px;
 
 }
 
@@ -69,7 +67,7 @@
 }
 
 
-#box1 h1,#box2 h1
+.box1 h1
 {
 	font-weight:400;
 	background: #f6f6f6;
@@ -97,18 +95,18 @@
 	border-radius:5px;
 	transition:0.3s;
 	cursor:pointer;
-	background: #f8f8f8;
+	background: #fff;
 	overflow: hidden;
 	line-height: normal;
 
 
 }
 
-#boxCoursAccueil{box-shadow: inset 0px 0px 50px 0px lightgrey;}
+#boxCoursAccueil{box-shadow: inset 0px 0px 30px 0px #e1e1e1;}
 
 #boxTutoratAccueil{background:linear-gradient(-45deg, #ffffff 25%, #f1f1f1 25%, #f1f1f1 50%, #ffffff 50%, #ffffff 75%, #f1f1f1 75%, #f1f1f1);background-size:6px 6px;}
 
-#boxCoursAccueil:hover,#boxTutoratAccueil:hover{background:#f6f6f6;transition:0.5s;box-shadow: inset 0px 0px 60px 0px #a1a1a1;}
+#boxCoursAccueil:hover,#boxTutoratAccueil:hover{background:#f6f6f6;transition:0.5s;box-shadow: inset 0px 0px 30px 0px #b1b1b1;}
 
 #boxCoursAccueil h2 {color:#FFA500;margin:0px;margin-top:40px; font-size: 1.2em;}
 
@@ -122,6 +120,8 @@
 	background: #434343;
 	float: left;
 	font-size: 0.8vw;
+	overflow: hidden;
+	word-break: break-all;
 }
 
 #bulle
