--- a/DATA/Site/style/globalcss.css
+++ b/DATA/Site/style/globalcss.css
@@ -6,13 +6,13 @@
 
 html,body
 {
-	height: 100%;
-	min-width:450px;
+	min-height: 100%;
+	min-width:0px;
 	margin:0;
 	padding:0;
 	font-family:SourceSansProRegular;
 	font-style: normal;
-	background: linear-gradient(#f9f9f9, #fdfdfd)  ;
+	background: linear-gradient(#f9f9f9, #f9f9f9	)  ;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -27,6 +27,41 @@ html,body
 	text-align:center;
 	min-height: 100%;
 	overflow: hidden;
+}
+
+#menuDeroulant
+{
+	position: absolute;
+	display: none;
+	z-index: 100000;
+	text-align: left;
+	right:20%;
+	top:40px;
+	padding-left:10px;
+	width:120px;
+	background: #212121;
+	color: whitesmoke;
+	opacity: 0.9;
+	color: #9a9a9a;
+
+}
+#menuDeroulant ul {list-style-type: none;padding:0}
+#menuDeroulant li {margin-bottom: 5px;padding-left: 10px;}
+#menuDeroulant a {text-decoration:none;color:#9a9a9a;}
+#menuDeroulant a:hover {color:#bcbcbc;}
+
+#zoneClick
+{
+	position: absolute;
+	padding-left:5px;
+	top:0;
+	right:20%;
+	width:120px;
+	height:40px;
+	z-index: 1000000;
+	cursor: pointer;
+
+
 }
 
 /*quand taille reduite*/
@@ -47,8 +82,7 @@ html,body
 }
 @media only screen and (max-width:950px)
 {
-
-
+	#f3 {display: none;}
 }
 @media only screen and (max-width:900px)
 {
@@ -65,17 +99,24 @@ html,body
 	#sousheader #search{display:none;}
 	#sousheader .bsh1{margin-left:32%;transition:0.7s}
 
+#zoneClick,#menuDeroulant, .bh2{right:0;margin-right: 0;}
+.bh2{transition: 0.2s;}
 }
 @media only screen and (max-width:550px)
 {
 	.bh2 p {display:none;}
 	.bh2 {width:75px;}
-	#warpper .matiere{font-size: 11px;}
+	#warpper .matiere{font-size: 7pt;}
+	#warpper #coursTutorat{font-size: 10pt}
 }
 @media only screen and (max-width:500px)
 {
 	.univ{display:none;}
-}@media only screen and (max-width:350px)
+
+}
+@media only screen and (max-width:400px)
 {
+	#sousheader .bsh1,#sousheader .bsh2,#sousheader .bsh3{min-width:57px;font-size: 12pt;margin-right:10px;}
+	#sousheader .bsh1{margin-left:50px;}
 	.iut{display:none;}
 }
