--- a/DATA/Site/style/forum.css
+++ b/DATA/Site/style/forum.css
@@ -62,6 +62,7 @@ a {
 	margin-left:5%;
 	font-weight:normal;
 	margin-top:5%;
+	margin-bottom:5%;
 }
 
 #reponses{
@@ -214,6 +215,10 @@ input[type=text]{
 	margin:1px 2% 1px 1px;
     color: white;
 	opacity:1;
+}
+
+#contenu{
+	padding:1%;
 }
 
 .avatar{
