--- a/DATA/Site/style/accueil.css
+++ b/DATA/Site/style/accueil.css
@@ -64,6 +64,7 @@
 	margin-top:0;
 	padding:0;
 	display: inline-block;
+	color: black;
 }
 
 
@@ -117,7 +118,7 @@
 {
 	width:33%;
 	height: 100%;
-	background: #434343;
+	background: #353535;
 	float: left;
 	font-size: 0.8vw;
 	overflow: hidden;
@@ -127,19 +128,24 @@
 #bulle
 {
 	 width:90%;
-	 height: 150px;
+	 /*height: 150px;*/
 	 margin:auto;
 	 margin-top:0px;
 	 margin-bottom:40px;
-	 background:;
+	 padding: 10px;
+	 word-break: break-all;
+	 text-overflow: ellipsis;
 	 position:relative;
 	 box-shadow: 1px 1px 2px 1px #403e3f;
 	 border-radius:1px;
-	 color:#f5f5f5;
+	 color:#353535;
 	 font-weight:600;
 	 transition:0.4s;
 	 cursor:pointer;
+	 overflow: ;
+	 box-sizing: border-box;
  }
+
 #bulle::after
 {
 	content:"";
@@ -154,6 +160,11 @@
 
 #bulle:hover{box-shadow: 1px 1px 2px 2px #403e3f;transition:0.4s}
 
-#bullesForum a {background: #e1e1e1; border-radius: 5px;padding: 2px;box-shadow: 01px 1px 2px 1px #a1a1a1}
-#bullesForum a:hover {box-shadow: 01px 1px 1px 1px #a1a1a1}
-#bullesForum a:focus {box-shadow: 01px 1px 0px 1px #a1a1a1}
+
+
+
+#bulle h3 {background:#353535; margin: 0;color: #ffa500}
+#bulle ul {list-style-type: none; padding: 0; text-align: left;}
+.botBulleGauche{position:absolute;bottom: 0;right: 5px;opacity: 0.5}
+.botBulleDroit{position:absolute;bottom: 0;left: 5px;opacity: 0.5}
+.pseudoTopic{margin-top:15px;text-align: left;margin-bottom:}
