--- a/DATA/Site/style/forum.css
+++ b/DATA/Site/style/forum.css
@@ -82,14 +82,14 @@ a {
 
 table {
     border-collapse: collapse;
-    max-width: 98%;
-		margin:0 1% 0 1%;
+    width: 98%;
+	margin:0 1% 0 1%;
 }
 
 th{
 	font-size:1.3em;
 	background-color: #353535;
-  color:  #FFA500;
+	color:  #FFA500;
 	word-break: break-all;
 }
 
@@ -151,9 +151,16 @@ input[type=text]{
 	background-color:#f2f2f2;
 }
 
+.date, #nosujet{
+	color: #BFBFBF;
+}
+
 .date{
 	font-size:0.6em;
-	color: #BFBFBF;
+}
+
+#nosujet{
+	font-style:italic;
 }
 
 .icone{
