Correction de bugs
Ajout du bouton signaler (fonction en dev)

Impossible désormais de publier des messages dans un sujet validé

Correction d'un bug de tri des messages

Ajout de l'heure (DATETIME au lieu de DATE dans la BDD)

Ajout du dernier message (auteur et date) d'un sujet

--- a/DATA/Site/style/forum.css
+++ b/DATA/Site/style/forum.css
@@ -246,6 +246,11 @@ input[type=text]{
 	font-weight:bold;
 }
 
+.auteurSec{
+	font-size:1.05em;
+	font-weight:bold;
+}
+
 .fleche{
 	height:10px;
 	margin:10px 10px 0 10px;
