--- a/DATA/Site/style/forum.css
+++ b/DATA/Site/style/forum.css
@@ -180,6 +180,15 @@ input[type=text]
 	color: #BFBFBF;
 }
 
+.dateModif
+{
+	margin-left:5%;
+	font-size:0.8em;
+	font-weight:bold;
+	color: #FFA500;
+	font-style:italic;
+}
+
 .icone
 {
 	height:20px;
