--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -1,3 +1,8 @@
+table{
+    margin: auto;
+    padding: 20px;
+}
+
 th, td {
     margin: 0;
     text-align: center;
@@ -12,7 +17,7 @@ td {
 th {
     background: #666;
     color: white;
-    padding: 5px 10px;
+    padding: 10px 20px;
 }
 
 td:hover {
