--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -25,3 +25,26 @@ td:hover {
     background: #666;
     color: white;
 }
+
+.listeBoutons li{
+    display: inline-block;
+    margin: auto;
+}
+
+.listeBoutons a{
+    width: 115px;
+    height: 20px;
+    background: #FFA500;
+    padding: 5px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: #353535;
+    font-weight: bold;
+    text-decoration: none;
+}
+.listeBoutons a:hover{
+    cursor: pointer;
+    background: #ff8a00;
+    color: #353535;
+}
