Ajout de couleurs pour les modules dans l'affichage du planning
Dans le foreach utilisé pour afficher toutes les cellules d'une semaine, on va assigner une class à un module pour pouvoir modifier sa couleur dans le CSS
Ex : le module Programmation C pourra être modifer grace à la class Programmation_C

--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -1,4 +1,4 @@
-table{
+table {
     margin: auto;
     padding: 20px;
 }
@@ -20,32 +20,46 @@ th {
     padding: 10px 20px;
 }
 
-.colonneHeure{
-
-  background: #ececec;
+.colonneHeure {
+    background: #ececec;
 }
 
-.contenuPlanning{
+td[class=''] {
 
 }
 
-.contenuPlanning:hover{
+td[class='']:hover {
     cursor: pointer;
     background: #ececec;
 }
 
-.listeBoutons{
+.Programmation_C {
+    background: #2ecc71;
+}
+
+.BDA {
+    background: #3498db;
+}
+
+.BDA:hover, .Programmation_C:hover {
+    cursor: pointer;
+    background: #26A65B;
+    font-weight: bold;
+    color: #ececec;
+}
+
+.listeBoutons {
     width: 200px;
     margin: auto;
     padding: 0px;
     text-align: center;
 }
 
-.listeBoutons li{
+.listeBoutons li {
     display: inline-block;
 }
 
-.listeBoutons a{
+.listeBoutons a {
     background: #FFA500;
     padding: 5px;
     margin: 0px;
@@ -55,7 +69,8 @@ th {
     font-weight: bold;
     text-decoration: none;
 }
-.listeBoutons a:hover{
+
+.listeBoutons a:hover {
     cursor: pointer;
     background: #ff8a00;
     color: #353535;
