CSS moins rustique (mais bugé) pour le formulaire d'ajout d'un tutorat
Meilleur CSS pour le formulaire d'ajout d'un tutorat, néanmoins y'a des bugs : mauvais affichage des radio buttons

--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -66,35 +66,61 @@ td[class='']:hover {
 }
 
 .listeBoutons a {
-    background: #FFA500;
-    padding: 5px;
-    margin: 10px;
-    text-align: center;
-    border-radius: 5px;
-    color: #353535;
-    font-weight: bold;
+    border: none;
+    padding: 8px 15px 8px 15px;
+    background: #FF8500;
+    color: #fff;
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     text-decoration: none;
 }
 
 .listeBoutons a:hover {
     cursor: pointer;
-    background: #ff8a00;
-    color: #353535;
+    background: #EA7B00;
+    color: #fff;
 }
 
 #boutonDemandeTutorat{
-  background: #78ff00;
-  padding: 5px;
-  margin-top: 1000px;
-  text-align: center;
-  border-radius: 5px;
-  color: #353535;
+  border: none;
+  padding: 8px 15px 8px 15px;
+  background: #59bd00;
+  color: #fff;
+  box-shadow: 1px 1px 4px #DADADA;
+  -moz-box-shadow: 1px 1px 4px #DADADA;
+  -webkit-box-shadow: 1px 1px 4px #DADADA;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
   font-weight: bold;
   text-decoration: none;
 }
 
 #boutonDemandeTutorat:hover{
   cursor: pointer;
-  background: #59bd00;
-  color: #353535;
+  background: #499c00;
+  color: #fff;
+}
+
+input[type=submit], input[type=button]{
+    border: none;
+    padding: 8px 15px 8px 15px;
+    background: #FF8500;
+    color: #fff;
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+
+input[type=submit]:hover, input[type=button]:hover{
+    cursor: pointer;
+    background: #EA7B00;
+    color: #fff;
 }
