--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -1,6 +1,11 @@
 table {
     margin: auto;
     padding: 20px;
+
+}
+
+tr:nth-child(odd) {
+    background-color: #f2f2f2
 }
 
 th, td {
@@ -123,4 +128,43 @@ input[type=submit]:hover, input[type=button]:hover{
     cursor: pointer;
     background: #EA7B00;
     color: #fff;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    display: none;
+    width: 150px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    margin-top: 10px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -75px;
+
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    display: block;
+}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    bottom: 100%;  /* At the top of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
 }
