--- a/DATA/Site/style/tutorats.css
+++ b/DATA/Site/style/tutorats.css
@@ -133,6 +133,8 @@ input[type=submit]:hover, input[type=button]:hover{
 .tooltip {
     position: relative;
     display: inline-block;
+    text-decoration: none;
+    color: #fff;
 }
 
 .tooltip .tooltiptext {
