Ajout colonne titre dans table cours et cours rangés dans un tableau

--- a/DATA/Site/style/cours.css
+++ b/DATA/Site/style/cours.css
@@ -119,3 +119,10 @@ h2
   background: #499c00;
   color: #fff;
 }
+
+#tablecours
+{
+    border-collapse: collapse;
+		width: 50%;
+		margin: auto;
+}
