Modification mise en forme et CSS

--- a/DATA/Site/style/cours.css
+++ b/DATA/Site/style/cours.css
@@ -2,9 +2,19 @@
 {
 	width:70%;
 	margin:auto;
-	margin-top:130px;
+	margin-top:50px;
 	margin-bottom:70px;
 	overflow:hidden;
+}
+
+h1
+{
+	color:#FFA500;
+	margin-top:10;
+	text-align:center;
+	margin-bottom:30px;
+	whidth:100%;
+	cursor: pointer;
 }
 
 h2
@@ -22,7 +32,6 @@ h2
 {
 	margin:auto;
 	width:100%;
-	display:none ;
 	min-width:500px;
 	margin-left:0%;
 	margin-top: 20px;
@@ -68,36 +77,6 @@ h2
 
 #boxCours a p {line-height:0px;text-align:center;width:150px;}
 
-.listeBoutons {
-    width: 200px;
-    margin: auto;
-    padding: 0px;
-    text-align: center;
-}
-
-.listeBoutons li {
-    display: inline-block;
-}
-
-.listeBoutons a {
-    border: none;
-    padding: 8px 15px 8px 15px;
-    background: #FF8500;
-    color: #fff;
-    box-shadow: 1px 1px 4px #DADADA;
-    -moz-box-shadow: 1px 1px 4px #DADADA;
-    -webkit-box-shadow: 1px 1px 4px #DADADA;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    text-decoration: none;
-}
-
-.listeBoutons a:hover {
-    cursor: pointer;
-    background: #EA7B00;
-    color: #fff;
-}
 
 #boutonDemandeTutorat{
   border: none;
@@ -123,6 +102,6 @@ h2
 #tablecours
 {
     border-collapse: collapse;
-		width: 50%;
+		width: 100%;
 		margin: auto;
 }
