Revert "Merge pull request #4 from AntoninS/Profil"
This reverts commit bf6668a68344374e02eeff2c7f9f309806f142c7, reversing
changes made to 5ad82c31b13904739a25a09e79f03c94ee9199b9.

--- a/DATA/Site/style/cours.css
+++ b/DATA/Site/style/cours.css
@@ -2,9 +2,19 @@
 {
 	width:70%;
 	margin:auto;
-	margin-top:130px;
+	margin-top:50px;
 	margin-bottom:70px;
 	overflow:hidden;
+}
+
+h1
+{
+	color:#FFA500;
+	margin-top:10;
+	text-align:center;
+	margin-bottom:30px;
+	whidth:100%;
+	cursor: pointer;
 }
 
 h2
@@ -22,7 +32,6 @@ h2
 {
 	margin:auto;
 	width:100%;
-	display:none ;
 	min-width:500px;
 	margin-left:0%;
 	margin-top: 20px;
@@ -67,3 +76,51 @@ h2
 }
 
 #boxCours a p {line-height:0px;text-align:center;width:150px;}
+
+
+#boutonDemandeTutorat{
+  border: none;
+  padding: 8px 15px 8px 15px;
+  background: #59bd00;
+  color: #fff;
+  box-shadow: 1px 1px 4px #DADADA;
+  -moz-box-shadow: 1px 1px 4px #DADADA;
+  -webkit-box-shadow: 1px 1px 4px #DADADA;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#boutonDemandeTutorat:hover{
+  cursor: pointer;
+  background: #499c00;
+  color: #fff;
+}
+
+#tablecours
+{
+    border-collapse: collapse;
+		width: 100%;
+		margin: auto;
+}
+
+.icone
+{
+	height:20px;
+	vertical-align:center;
+	margin:0 0 0 25%;
+}
+
+#celluleIcone
+{
+	width:4%;
+}
+
+.poubelle
+{
+	height:40px;
+	opacity:0.8;
+	transition-duration: 0.2s;
+}
