--- a/DATA/Site/style/globalcss.css
+++ b/DATA/Site/style/globalcss.css
@@ -3,6 +3,10 @@
 @font-face    {font-family : 'SourceSansProLight'; src : url('../fonts/SourceSansPro-light.ttf');}
 
 
+*
+{
+	font-family:SourceSansProRegular;
+}
 
 html,body
 {
@@ -10,7 +14,6 @@ html,body
 	min-width:0px;
 	margin:0;
 	padding:0;
-	font-family:SourceSansProRegular;
 	font-style: normal;
 	background: linear-gradient(#f9f9f9, #f9f9f9	)  ;
 	background-repeat: no-repeat;
