--- a/DATA/Site/style/forum.css
+++ b/DATA/Site/style/forum.css
@@ -1,8 +1,3 @@
-*
-{
-	font-family:calibri;
-}
-
 a
  {
 	text-decoration:none;
@@ -13,7 +8,7 @@ a
 {
 	width:70%;
 	margin:auto;
-	margin-top:5%;
+	margin-top:4%;
 	margin-bottom:70px;
 	overflow:hidden;
 }
@@ -115,18 +110,16 @@ table a
 input[type=text]
 {
 	width: 80%;
-	padding: 12px 20px;
-	margin: 8px 0;
+	padding: 0.5% 0.8%;
 	box-sizing: border-box;
 }
 
 #message
 {
-	height:100px;
+	height:70px;
 	width: 80%;
 	word-break: break-all;
-	padding: 12px 20px;
-	margin: 8px 0;
+	padding: 0.5% 0.8%;
 	box-sizing: border-box;
 }
 
@@ -337,12 +330,14 @@ input[type=text]
 h3
 {
 	margin : auto;
-	margin-top : 3%;
+	margin-top : 1%;
 }
 
 #no
 {
-	width:100%;
+	width:95%;
+	text-align:left;
+	margin : 1% 0 1% 2%;
 }
 
 #no a, #no span
@@ -350,12 +345,12 @@ h3
 	margin-right: 0.25%;
 	margin-left:0.25%;
 	font-weight:bold;
-	font-size:1.2em;
+	font-size:1em;
 }
 
 #no span
 {
 	margin-left:0.25%;
 	margin-right:0.25%;
-	font-size:1.5em;
+	font-size:1.2em;
 }
