--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -4,28 +4,30 @@
 	margin-top:0px;
 	padding:50px 0px 10px 0px;
 	overflow:hidden;
+	font-family:SourceSansProRegular;
 }
 
 #boxInfoUser
 {
   width:30%;
-  min-width: 300px;
-  height: 1000px;
+  min-width: 40%;
+  height: 40%;
   box-sizing: border-box;
   overflow: hidden;
-  background: #ffffff;
-  color: #2a2a2a;
+  background: #ffffff$$;
+  color: #434343;
   float:left;
   margin:auto;
-  margin-left: 25%;
-  padding:10px;
+  margin-left: 32%;
+  padding:30px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   border-radius: 2px ;
 }
-section {background: yellow;overflow: hidden}
+
 .usr
 {
-  width: 35%;
+  width: 20
+ %;
   float: left;
   border: 1px solid #353535;
   border-radius: 5px;
@@ -51,6 +53,55 @@ section {background: yellow;overflow: hidden}
   margin-left: 25px;
   overflow: visible;
 
+}
+.Outils{
+	font-weight: bold;
+	color: #FFA500;
+	font-size: 25PX;
+	margin-top:10%;
+	margin-bottom:2%;
+}
+#OUTILS
+{
+	
+  
+
+
+}
+
+.input{
+	border: none;
+   padding: 8px 15px 8px 15px;
+    margin: 6px;
+  
+   
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    font-weight: bold;
+}
+.inputPROUT {
+	
+
+   border: none;
+   padding: 1% 1.5% 1% 1.5%;
+    margin: 1% 20% 0% 0%;
+	float:left;
+    background: #FFA500;
+    color:  white;
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    font-weight: bold;
+	text-decoration:none;
+	width:35%;
+	
 }
 
 .coursConsultes , .topicsConsultes
